# Silver-Economy-Consultants

./: AI_strategy.md  README.md  app.py  pyproject.toml  run.sh
data/: silver_economy_demo.csv
