[project]
name = "silver-economy-streamlit"
version = "0.1.0"
description = "Streamlit market screener for affluent senior retirement community analysis using ACS data."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "streamlit==1.41.1",
  "pandas==2.2.3",
  "numpy==1.26.4",
  "plotly==5.24.1",
  "xarray==2024.7.0",
  "requests>=2.31,<3",
  "pyarrow==18.1.0",
]

[tool.uv]
package = false
